styles/globals.css
@import url('/fonts/stylesheet.css');
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  overflow: overlay;
}

h1 {
  font-family: 'Source Sans Pro', sans-serif !important;
}

@font-face {
  font-family: 'nasalization';
  src: url('/fonts/nasalization-rg.otf') format('truetype');
}

.nasalization {
  font-family: 'nasalization';
}


a.link {
  /* padding-right: 30px; */
  cursor: pointer;
  align-items: center;
  justify-content: center;
  display: flex-center;
  @apply px-4;
}

.element {
  font-family: 'Montserrat';
}

.profile-view {
  display: grid;
  grid-template-areas:
    'name role'
    'university university';
  row-gap: 2rem;
  column-gap: 1rem;
}

.profile-view-name {
  grid-area: name;
}

.profile-view-role {
  grid-area: role;
}

.profile-view-univ {
  grid-area: university;
}

.profile-view-lunch {
  grid-area: lunchGroup;
}

.profile-view-interests {
  grid-area: interests;
}

.challengeGrid {
  column-count: 2;
}

@media (max-width: 768px) {
  .challengeGrid {
    column-count: 1;
  }

  /* Home page video scaling */
  .video {
    zoom: 0.7 !important;
    -moz-transform: scale(0.7) !important;
    -o-transform: scale(0.7) !important;
    -webkit-transform: scale(0.7) !important;
  }

  .footerIcon {
    transform: scale(1) !important;
  }
}

@media (max-width: 1024px) {
  /* Home page video scaling */
  .video {
    zoom: 0.85;
    -moz-transform: scale(0.85);
    -moz-transform-origin: top center;
    -o-transform: scale(0.85);
    -o-transform-origin: top center;
    -webkit-transform: scale(0.85);
    -webkit-transform-origin: top center;
  }
}

/* For challenge selection in home page */
.arrow-right {
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;

  border-left: 10px solid rgb(233 213 255);
}

/* Safari key icon for sign up password field */
.newPasswordInput::-webkit-credentials-auto-fill-button {
  position: absolute;
  right: 4rem;
}

.registrationTitle:after {
  content: '';
  display: block;
  margin: 0 auto;
  width: 75%;
  padding-top: 15px;
  border-bottom: 2px solid black;
}

/* Dashboard mobile menu */
.accordion {
  cursor: pointer;
  transition: 0.4s;
  position: relative;
  width: 12rem;
  -webkit-transition: width 0.15s ease-in-out;
  -moz-transition: width 0.15s ease-in-out;
  -o-transition: width 0.15s ease-in-out;
  transition: width 0.15s ease-in-out;
}
.menuactive {
  width: 100%;
}

.panel {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

.accordion:after {
  content: '\02795';
  font-size: 12px;
  float: right;
}

.menuactive:after {
  content: '\2796';
}

.footerIcon {
  transform: scale(1.5);
}

.home {
  /* background-image: url("/assets/homeBackground.png"); */
  background-image: url("/assets/homeBackground2.png");
  background-repeat: no-repeat;
  /* background-attachment: fixed;  */
  background-size: cover;
}

.appHeader {
  background-color: rgba(0, 0, 0, 0.15);
  backdrop-filter: blur(15px);
}

.accountSection {
  background-color: rgba(157, 115, 210, 0.2);
  /* backdrop-filter: blur(15px); */
}

.input{
  background-color: rgba(255, 255, 255, 0.35);
  backdrop-filter: blur(8px);
}
.slant {
  background: 
       linear-gradient(to top left,
           rgba(255, 255, 255, 0) 0%,
           rgba(255, 255, 255, 0) calc(50% - 2px),
           rgb(255, 255, 255) 50%,
           rgba(255, 255, 255, 0) calc(50% + 2px),
           rgba(255, 255, 255, 0) 100%)
}

.textGradient {
  background: linear-gradient(180deg, #FFFFFF 56.25%, rgba(255, 255, 255, 0) 100%) !important;
  -webkit-background-clip: text !important;
  -webkit-text-fill-color: transparent !important;
  background-clip: text !important;
}

.background {
  /* background-image: url("/assets/HackUTDBackground.jpg"); */
  background-image: url("/assets/HackUTDBackground2.png");
  background-repeat: no-repeat;
  background-size: cover;
}

@keyframes raise {
  0% {
    transform: translatey(0px);
  }
  30% {
    transform: translatey(-6px);
  }
  100% {
    transform: translatey(0px);
  }
}

.submit:hover {
  animation: raise 1s ease-out;
  transition: 0.3s ease-out;
}

.footerIcon:hover {
  animation: raise 0.5s ease-out;
  transition: 0.3s ease-out;
}

.raise:hover {
  animation: raise 1s ease-out;
  transition: 0.3s ease-out;
}

.background404 {
  background-image: url("/assets/HackUTDBackground.jpg");
  background-repeat: no-repeat;
  /* background-attachment: fixed;  */
  background-size: 100vw 100vh;
}

.navbarBackground {
  background: linear-gradient(171.65deg, #11021E 0%, #1D123D 45.31%, #37214F 99.29%);;
}

.bounce-in {
  animation: bounce-in 1.5s ease;
}
@keyframes bounce-in {
  0% {
    opacity: 0;
    transform: scale(.3);
  }
  50% {
    opacity: 1;
    transform: scale(1.05);
  }
  70% { transform: scale(.9); }
  100% { transform: scale(1); }
}

.notif {
  background-color: rgba(157, 115, 210, 0.2);
  box-shadow: rgba(255, 255, 255, 0.16) 0px 10px 36px 0px, rgba(255, 255, 255, 0.06) 0px 0px 0px 1px;
}

.dateGradient {
  background: linear-gradient(180deg, rgba(255, 0, 0, 0.76) 47.4%, rgba(113, 0, 0, 0.57) 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
}

.registerGlow:hover {
  -moz-box-shadow: 0 0 20px rgb(210, 212, 214);
  -webkit-box-shadow: 0 0 20px rgb(210, 212, 214);
  box-shadow: 0px 0px 20px rgb(210, 212, 214);
}

.float { 
    animation-name: float;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}
 
@keyframes float {
    0% { transform: translate(0,  0px); }
    50%  { transform: translate(0, 15px); }
    100%   { transform: translate(0, -0px); }   
}

@keyframes asteroid {
  50% { -webkit-transform: scale(1.1) rotate(-3deg) translateY(8px) translateX(-20px) }

}

.asteroid {
  animation: asteroid 6s infinite ease-in-out;
}

.spin {
  animation: spin 25s infinite linear;
}
@keyframes spin {
  from { transform: rotate(360deg); }
  to { transform: rotate(0deg); }
}

*::-webkit-scrollbar-track {
  background-color: transparent;
  width: 25px;
}

::-webkit-scrollbar {
  width: 25px;
}
*::-webkit-scrollbar-thumb {
  background:rgba(0, 0, 0, 0) url('/assets/ToborScroll.png') no-repeat;
  background-size:25px 30px;  
  display: block;
}

